@@ -14,6 +14,8 @@
 - Fixed BitmapFont color tags changing glyph spacing versus not using color tags. BitmapFont#getGlyphs has a new paramter. See #3455.
 - Skin's TintedDrawable now works with TiledDrawable. #3627
 - Updated jnigen to Java Parser 2.3.0 (http://javaparser.github.io/javaparser/).
+- A custom shader can be set on ShapeRenderer by calling getRenderer().setShader(shader);.
+- API Change: ImmediateModeRenderer20.setShader(shader) does not dispose the default shader. ImmediateModeRenderer20.setShader(null) reapplies the default shader.
 
 [1.7.1]
 - Fixes AtlasTmxMapLoader region name loading to tileset name instead of filename
